--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,38 +1,70 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=64bde1a7e70ccaafa63c",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=4bab669e6aa9f17b48c5",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=0dafd2fd0beab44b9a89",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=088047c4806cb0bcb98e",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=9929c987c20becb35182",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=17c4052706857daab9ef",
-    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=ac5014915acd09b65fa8",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=4ba435d2458dc0f25b62",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=0d6c343930ad7bd0fb86",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=e3678e8571d54e0547ef",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=cf4621ab201b7b18a40f",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=bc119020f078d5da3948",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6498d37a7e665f775faf",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=3223ee10d0e409326c2a",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=23b17bcaecd478b00787",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=ae409f0c30051ba03b18",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=5969a7bac8b62504d5df",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=ea9467d11fd265e3d866",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=9f20eccdc9daca571f0b",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=247e11812fdbde8159f1",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=f61e09c67edf0a2772c8",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=8a34cce83197d4a19088",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=e3b8e7a85dafc6bcfc5d",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=3e7caa1f848f9c64c918",
-    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=4e349698000f2a614879",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=2ba209a649f13e4231dc",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=2e74ede12edcd4ea3029",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=755816d86cbe4cdced00",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=8b401d28530f55517030",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=f29142f31985208321c5",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=1b5f7ecf5505bc316594",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=30976787ce72c105791f",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=09d25c8a00d6826c7b4c",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=9b0e264059d0a65fb2ee",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=81225574f2bacfe97595",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=5f5c25e97c640fb3bb55",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=bc75ddc7f6f52cb8212a",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=287313a4086311d7807d",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=80c698bdb53192630593",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=f3c26474bc14c34f2a8e",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=2c2a1403354469c239ad",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=7c46e0a480e9c3619099",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=5f6726b16f4ae8293ce5",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=ecb0c14692b74ca58eea",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=07eb37f00046b14ec1e9",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=a17b903ed1703fe5912c",
+    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=b41a68fd23830c9982ed",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=1947782a08c05f89f86d",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=238745645c234e64b294",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=3ed2cd0fbe6037822b09",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=26a4159c71fdb2cdbf07",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=6ce4e5d064233ed89fcd",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=3117e2d4add90040444f",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=ad3cdb408aaf8a835c55",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=ef9e30cb3eb81679aefd",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=d2c8a5132102a102e425",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=769c76c97ce2b58b798d",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=22da9790436e237c97a7",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=cc29e3e50cb6c785e8eb",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=e34c9d83f1eab894c633",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=46c77f4b3028c8815b34",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=fa7e01b3a67ca8c5b4bd",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=1983cacf7fe710f10d70",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=46f4929858776265f56c",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=00703d1a85fafdcfe755",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=45668c0f8b51cda4d141",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=77e8994f68cf84be023f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=d5b1af95e0075cd95d20",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=5ee4ce3a8d1f7c191aec",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=86211050a9d15b1e3cee",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=17eafa86babdf3e814d0",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=d162d3d8c518897f92dc",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=58c332f064cd62176716",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=7ca38c3ca24217ce8fcf",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=7de2049a043367a7d5e7",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=2bedac3c861186a4ef23",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=416dde2ba3b41e6ecd4a",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=5e5caac9240ca92c3a0a",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=745f4c1d927a2928055a",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=d999a44a77191cf47225",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=0d0c7065c3ad6f1d22a1",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
+    "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=f7bf7c9489d63f3151d5",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=78e773c8eb86ce7bf2b0",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=7d9367b404632c606077",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=800cb076eaf4462a7734",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=b3d872572965cc3f9cdb",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=3a71999de981c93a5771",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=312008b1b374bf8d6110",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=c67bdc91a09ffed2ee28",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=0bed4e0216e8f6ce2452",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=d5cb812b929749f67cc6",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=a87e7391a41a22fa034f",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=edcd4edd217c6168c9bb",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=096ea6269383cb5b2b76",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=39fb9dc8bdb0871020eb",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
