[admin] service enhancement

--- a/admin/.env.example
+++ b/admin/.env.example
@@ -60,3 +60,5 @@ NEXMO_KEY=1b959df7
 NEXMO_SECRET=GfdCoWiis682hgrn
 
 META_DESCRIPTION = "Sistema de gestión de procesos de fabricación de la empresa D' Pintart"
+
+URL_WEB="http://www.dpintart.devel"
