--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -1,38 +1,70 @@
 {
-    "/js/modules/access.min.js": "/js/modules/access.min.js?id=390d1937fe220722b3eb",
-    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=f9d3939af32d8d29af4a",
-    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=1172507e1d2228a6f67f",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=19d5fc53f54c626fe4e1",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=e9fa3c0ffb16c06af662",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=bff12df96a9ca76b3e6a",
-    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=ac5014915acd09b65fa8",
-    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=55cc1a5b9454fe7460d1",
-    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=d06140c893ee52063b1c",
-    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=0765a0945f4fbd3ad6ff",
-    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=23604023d58f4c9dbc9d",
-    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=187c426cb0e929137286",
-    "/js/modules/manifest.js": "/js/modules/manifest.js?id=6498d37a7e665f775faf",
-    "/js/modules/module.min.js": "/js/modules/module.min.js?id=b506f539471c9ae69e74",
-    "/js/modules/page.min.js": "/js/modules/page.min.js?id=d5a661355c6016981506",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=3ff827a576e5d8620fe9",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=5238ec75c7074f24bb6f",
-    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=3e6f5e9fe0a6bf2aeee0",
-    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=d7075a0735a3350bb4bb",
-    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=fedbbef5042d18d42e91",
-    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=b1c5b8629c786a0445a4",
-    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=c8ccc74444059fd9aabb",
-    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=9c643e8b233a1f6d2e3e",
-    "/js/modules/role.min.js": "/js/modules/role.min.js?id=c84b471a668f0062ebcc",
-    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=955cb917d66534863d86",
-    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=4f5e0eb1561292670e4b",
-    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=1860e0d65dcf7ead9202",
-    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=0a31395bfbfc649fc230",
-    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=a35402e10939f4098ed1",
-    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=b91a440a33089355d1be",
-    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=c948622712db4e3c0eb9",
-    "/js/modules/user.min.js": "/js/modules/user.min.js?id=3ec9063ba5b1eb28aeb1",
-    "/js/modules/vendor.js": "/js/modules/vendor.js?id=3d9dd493f57af3567885",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=a2127e3065913696e2ca",
+    "/js/modules/manifest.js": "/js/modules/manifest.js?id=d91051ea7d0c9bd1981e",
+    "/js/modules/manifest.js.map": "/js/modules/manifest.js.map?id=bb3cff1e383b86da59bd",
+    "/js/modules/vendor.js": "/js/modules/vendor.js?id=d3bdeeddd9108fb2ead4",
+    "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=0560ed23895251d24b9f",
+    "/js/modules/access.min.js": "/js/modules/access.min.js?id=22ef36c0bb677a8349b1",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=4f25ed06a3f6070b92fd",
+    "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=acb8107edd6c143e5009",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=44db4b708f7cf3536e89",
+    "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=827d5e5b16e7eb494969",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=6b0f03d25e7e65a0a4d6",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a8ae873fce14efe468dd",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=e2870f62a05c405a2139",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=7eeb60cbfb41a2b2b559",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=9991bae286d38ed767e9",
+    "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=ed5312d7531d68c749cb",
+    "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=b780d471b01d611e677d",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=c5671d456a20a3954bf8",
+    "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=c9689694a4c4f7f240f0",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=a3b165113232a0f75d90",
+    "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=ccfd01061fbac478efc6",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=f03ff3c5572e84d0a134",
+    "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=6dfdc0e6e09c88890681",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=08aeac7908748f6e6c42",
+    "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=aa1f08e53a292327c11f",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=447531311fd07442fc45",
+    "/js/modules/module.min.js": "/js/modules/module.min.js?id=70e85cbddd3ca418b413",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=69ac453e0b7cfe9c0223",
+    "/js/modules/page.min.js": "/js/modules/page.min.js?id=6634397f6d068633bf3c",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=96c54970c7e27166ec7e",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=60b15b9167fd19aebd8d",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=57cd68f125d49e480e49",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=844278ec9591b1949b9d",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=4c32d4036fe604408bc6",
+    "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=d4e6f852f989528697aa",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=5f530f0e1cc9d869c16f",
+    "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=7b684688cbf40de9145e",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=f25a8c6fff83a2a6621f",
+    "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=d5bbfa37c132216249db",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=d817f2843c7caf0a3178",
+    "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=bc5d9ab9cf6edead840c",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=1963f194094bb9a0a3e2",
+    "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=73211512f8a2ad00388f",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=5096494b690b1ee16264",
+    "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=bc0cdab3fad1f1c45d16",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=fcbca5f87f116950e6ec",
+    "/js/modules/role.min.js": "/js/modules/role.min.js?id=54f6916a6a68a1514be9",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=ee78d3911c9980ad96fe",
+    "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=9969ca01bfae0bbd557c",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=4ed6ce27d7f942443d87",
+    "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
+    "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
+    "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=52fdd236259604641c76",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=4f17fbbbead6ba2ca360",
+    "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=2f91470d1921a1f2931f",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=9cc185f49a3df65b3275",
+    "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=6edb540ec65f1e93469c",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=5b7200df3a2b133d335f",
+    "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=4f9d62a831ff1bcff665",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=7eca61b07b39ccf6651d",
+    "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=608acb345ddc7f482ec4",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=c895081608fe03873cbd",
+    "/js/modules/user.min.js": "/js/modules/user.min.js?id=f026ccfe637bec3e0306",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=0b5031359689b1b4cb58",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=b14d1d933913dde38925",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=75cb054e9a3d5a697f69",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
