--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -4,67 +4,68 @@
     "/js/modules/vendor.js": "/js/modules/vendor.js?id=d3bdeeddd9108fb2ead4",
     "/js/modules/vendor.js.map": "/js/modules/vendor.js.map?id=0560ed23895251d24b9f",
     "/js/modules/access.min.js": "/js/modules/access.min.js?id=22ef36c0bb677a8349b1",
-    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=4f25ed06a3f6070b92fd",
+    "/js/modules/access.min.js.map": "/js/modules/access.min.js.map?id=7ccb97482b9db39800a9",
     "/js/modules/calendar.min.js": "/js/modules/calendar.min.js?id=acb8107edd6c143e5009",
-    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=44db4b708f7cf3536e89",
+    "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=a8e6bf456fcde422689b",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=827d5e5b16e7eb494969",
-    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=6b0f03d25e7e65a0a4d6",
+    "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=9f059cc210ff3813c345",
     "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a8ae873fce14efe468dd",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=e2870f62a05c405a2139",
-    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=7eeb60cbfb41a2b2b559",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=80709c4e602619317387",
+    "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=c3eeb6cfdac676653911",
     "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=9991bae286d38ed767e9",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
-    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=ed5312d7531d68c749cb",
+    "/assets/pdf/css/pdf.min.css": "/assets/pdf/css/pdf.min.css?id=e931065d0c56ce7044a0",
+    "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=168713eb7b8e43ccc402",
     "/js/modules/holidays.min.js": "/js/modules/holidays.min.js?id=b780d471b01d611e677d",
-    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=c5671d456a20a3954bf8",
+    "/js/modules/holidays.min.js.map": "/js/modules/holidays.min.js.map?id=d9941c67b7324ccc4290",
     "/js/modules/icons.min.js": "/js/modules/icons.min.js?id=c9689694a4c4f7f240f0",
-    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=a3b165113232a0f75d90",
+    "/js/modules/icons.min.js.map": "/js/modules/icons.min.js.map?id=b57a3363c67d3e6b3889",
     "/js/modules/input-order.min.js": "/js/modules/input-order.min.js?id=ccfd01061fbac478efc6",
-    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=f03ff3c5572e84d0a134",
+    "/js/modules/input-order.min.js.map": "/js/modules/input-order.min.js.map?id=1bc9a29bf5eb52a47024",
     "/js/modules/list-materials.min.js": "/js/modules/list-materials.min.js?id=6dfdc0e6e09c88890681",
-    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=08aeac7908748f6e6c42",
+    "/js/modules/list-materials.min.js.map": "/js/modules/list-materials.min.js.map?id=7b6a6f191393709d0382",
     "/js/modules/logs.min.js": "/js/modules/logs.min.js?id=aa1f08e53a292327c11f",
-    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=447531311fd07442fc45",
+    "/js/modules/logs.min.js.map": "/js/modules/logs.min.js.map?id=14cfb7b09dc69baf5c2d",
     "/js/modules/module.min.js": "/js/modules/module.min.js?id=70e85cbddd3ca418b413",
-    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=69ac453e0b7cfe9c0223",
+    "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=7a5038b0ff7e972fd133",
     "/js/modules/page.min.js": "/js/modules/page.min.js?id=6634397f6d068633bf3c",
-    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=96c54970c7e27166ec7e",
+    "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=534a28755084d719e35a",
     "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=60b15b9167fd19aebd8d",
-    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=57cd68f125d49e480e49",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=f71742312e4faf885d5e",
     "/js/modules/products.min.js": "/js/modules/products.min.js?id=844278ec9591b1949b9d",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=4c32d4036fe604408bc6",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=8345aaa7226e1e9e91ba",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=d4e6f852f989528697aa",
-    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=5f530f0e1cc9d869c16f",
+    "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=e7b268db9fdb29edb4b6",
     "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=7b684688cbf40de9145e",
-    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=f25a8c6fff83a2a6621f",
+    "/js/modules/providers.min.js.map": "/js/modules/providers.min.js.map?id=0f59d26adc2ef7246719",
     "/js/modules/purchase-order.min.js": "/js/modules/purchase-order.min.js?id=d5bbfa37c132216249db",
-    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=d817f2843c7caf0a3178",
+    "/js/modules/purchase-order.min.js.map": "/js/modules/purchase-order.min.js.map?id=2d7608b6cbe9683ba83b",
     "/js/modules/purchase-request.min.js": "/js/modules/purchase-request.min.js?id=bc5d9ab9cf6edead840c",
-    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=1963f194094bb9a0a3e2",
+    "/js/modules/purchase-request.min.js.map": "/js/modules/purchase-request.min.js.map?id=57a64dfb32c6ef413a66",
     "/js/modules/purchase.min.js": "/js/modules/purchase.min.js?id=73211512f8a2ad00388f",
-    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=5096494b690b1ee16264",
+    "/js/modules/purchase.min.js.map": "/js/modules/purchase.min.js.map?id=253085325dfa285149ea",
     "/js/modules/quotation.min.js": "/js/modules/quotation.min.js?id=bc0cdab3fad1f1c45d16",
-    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=fcbca5f87f116950e6ec",
+    "/js/modules/quotation.min.js.map": "/js/modules/quotation.min.js.map?id=48222419bb88e53505e2",
     "/js/modules/role.min.js": "/js/modules/role.min.js?id=54f6916a6a68a1514be9",
-    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=ee78d3911c9980ad96fe",
+    "/js/modules/role.min.js.map": "/js/modules/role.min.js.map?id=76badb8a64889cc64658",
     "/js/modules/sales-quotation.min.js": "/js/modules/sales-quotation.min.js?id=9969ca01bfae0bbd557c",
-    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=4ed6ce27d7f942443d87",
+    "/js/modules/sales-quotation.min.js.map": "/js/modules/sales-quotation.min.js.map?id=338e43fcf3dfad7cb603",
     "/js/modules/sales_quote.min.js": "/js/modules/sales_quote.min.js?id=377192b9774bc87e9be2",
     "/js/modules/sales_quote.min.js.map": "/js/modules/sales_quote.min.js.map?id=b54ed1289ac4c9a9aa53",
     "/js/modules/services_request.min.js": "/js/modules/services_request.min.js?id=52fdd236259604641c76",
-    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=4f17fbbbead6ba2ca360",
+    "/js/modules/services_request.min.js.map": "/js/modules/services_request.min.js.map?id=adf81ed591b58ec52f45",
     "/js/modules/sites.min.js": "/js/modules/sites.min.js?id=2f91470d1921a1f2931f",
-    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=9cc185f49a3df65b3275",
+    "/js/modules/sites.min.js.map": "/js/modules/sites.min.js.map?id=d103e366e2b9afdb60e5",
     "/js/modules/stock.min.js": "/js/modules/stock.min.js?id=6edb540ec65f1e93469c",
-    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=5b7200df3a2b133d335f",
+    "/js/modules/stock.min.js.map": "/js/modules/stock.min.js.map?id=fd4ba6f93d9193da41c2",
     "/js/modules/tool.min.js": "/js/modules/tool.min.js?id=4f9d62a831ff1bcff665",
-    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=7eca61b07b39ccf6651d",
+    "/js/modules/tool.min.js.map": "/js/modules/tool.min.js.map?id=3e16667636f1ec297e68",
     "/js/modules/unity.min.js": "/js/modules/unity.min.js?id=608acb345ddc7f482ec4",
-    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=c895081608fe03873cbd",
+    "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=0a6327fd88639fae08ea",
     "/js/modules/user.min.js": "/js/modules/user.min.js?id=f026ccfe637bec3e0306",
-    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=0b5031359689b1b4cb58",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=b14d1d933913dde38925",
-    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=75cb054e9a3d5a697f69",
+    "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=d91babc0b78e3ea8a0d4",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=95dd1f4d6db6743dc79f",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=5fbc30a8fae176fae2fd",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
