[admin] module notification and mails

--- a/admin/.env.example
+++ b/admin/.env.example
@@ -62,3 +62,5 @@ NEXMO_SECRET=GfdCoWiis682hgrn
 META_DESCRIPTION = "Sistema de gestión de procesos de fabricación de la empresa D' Pintart"
 
 URL_WEB="http://www.dpintart.devel"
+
+API_NOTIFICATION=http://localhost:3005
