--- a/admin/package.json
+++ b/admin/package.json
@@ -7,7 +7,10 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "not-dev": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=webpack-dev.config.js",
+        "not-watch": "npm run not-dev -- --watch",
+        "not-production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --optimize-minimize --config=webpack-prod.config.js"
     },
     "devDependencies": {
         "axios": "^0.18.1",
@@ -17,8 +20,11 @@
         "bootstrap-vue": "^2.1.0",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.0.1",
+        "clean-webpack-plugin": "^1.0.0",
+        "copy-webpack-plugin": "^4.5.4",
         "cross-env": "^5.2.1",
         "datatables.net-bs4": "^1.10.19",
+        "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.1.4",
         "lodash": "^4.17.15",
@@ -40,6 +46,7 @@
         "moment": "^2.22.2",
         "npm": "^6.11.3",
         "select2": "^4.0.10",
+        "socket.io-client": "^2.3.0",
         "sweetalert": "^2.1.2",
         "vee-validate": "^2.2.15",
         "vue-datetime": "^1.0.0-beta.11",
