[admin] reports exports

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -82,5 +82,6 @@
     "/images/login-carpinteria.jpg": "/images/login-carpinteria.jpg?id=9d0d174782956e8cdd76",
     "/images/login-carpinteria-second.jpg": "/images/login-carpinteria-second.jpg?id=23dd863ee026ff7c9a87",
     "/images/product-180x180.png": "/images/product-180x180.png?id=90d115c3150976cb9d38",
-    "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c"
+    "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c",
+    "/js/plugins/dpintart.js": "/js/plugins/dpintart.js?id=a9712ad4a8d8a66c9d5f"
 }
