[admin] enhancement presentation products

--- a/admin/public/mix-manifest.json
+++ b/admin/public/mix-manifest.json
@@ -9,10 +9,10 @@
     "/js/modules/calendar.min.js.map": "/js/modules/calendar.min.js.map?id=a8e6bf456fcde422689b",
     "/js/modules/categories.min.js": "/js/modules/categories.min.js?id=827d5e5b16e7eb494969",
     "/js/modules/categories.min.js.map": "/js/modules/categories.min.js.map?id=9f059cc210ff3813c345",
-    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=a8ae873fce14efe468dd",
-    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=80709c4e602619317387",
+    "/js/modules/customers.min.js": "/js/modules/customers.min.js?id=02170e1678a46cb0ba80",
+    "/js/modules/customers.min.js.map": "/js/modules/customers.min.js.map?id=8bd75d7fc355930db71b",
     "/js/modules/dashboard.min.js": "/js/modules/dashboard.min.js?id=c3eeb6cfdac676653911",
-    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=9991bae286d38ed767e9",
+    "/css/styles-admin.min.css": "/css/styles-admin.min.css?id=502c6af14aab2e9899b1",
     "/assets/pdf/css/style.min.css": "/assets/pdf/css/style.min.css?id=5a70a3d903f4ddb25b39",
     "/assets/pdf/css/pdf.min.css": "/assets/pdf/css/pdf.min.css?id=e931065d0c56ce7044a0",
     "/js/modules/dashboard.min.js.map": "/js/modules/dashboard.min.js.map?id=168713eb7b8e43ccc402",
@@ -30,10 +30,10 @@
     "/js/modules/module.min.js.map": "/js/modules/module.min.js.map?id=e47b138fcb2cce526403",
     "/js/modules/page.min.js": "/js/modules/page.min.js?id=6634397f6d068633bf3c",
     "/js/modules/page.min.js.map": "/js/modules/page.min.js.map?id=534a28755084d719e35a",
-    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=de26d80e614403cc9a06",
-    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=1d91f019c8e71afda937",
-    "/js/modules/products.min.js": "/js/modules/products.min.js?id=844278ec9591b1949b9d",
-    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=8345aaa7226e1e9e91ba",
+    "/js/modules/presentation.min.js": "/js/modules/presentation.min.js?id=f4d68e044c0a91442a08",
+    "/js/modules/presentation.min.js.map": "/js/modules/presentation.min.js.map?id=d886f6e9a333aaaa98a5",
+    "/js/modules/products.min.js": "/js/modules/products.min.js?id=118c482bc8bfaf50065c",
+    "/js/modules/products.min.js.map": "/js/modules/products.min.js.map?id=b75ffd96f50e704cd677",
     "/js/modules/profile.min.js": "/js/modules/profile.min.js?id=d4e6f852f989528697aa",
     "/js/modules/profile.min.js.map": "/js/modules/profile.min.js.map?id=e7b268db9fdb29edb4b6",
     "/js/modules/providers.min.js": "/js/modules/providers.min.js?id=7b684688cbf40de9145e",
@@ -64,8 +64,8 @@
     "/js/modules/unity.min.js.map": "/js/modules/unity.min.js.map?id=0a6327fd88639fae08ea",
     "/js/modules/user.min.js": "/js/modules/user.min.js?id=f026ccfe637bec3e0306",
     "/js/modules/user.min.js.map": "/js/modules/user.min.js.map?id=d91babc0b78e3ea8a0d4",
-    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=01390e30a3a03e389844",
-    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=9c40aba456666dfeb431",
+    "/js/modules/vuex.min.js": "/js/modules/vuex.min.js?id=75f238b2c6fccdf6a369",
+    "/js/modules/vuex.min.js.map": "/js/modules/vuex.min.js.map?id=ffccc124fcd21b874c9b",
     "/css/main.min.css": "/css/main.min.css?id=0d4ed2d68c3559194557",
     "/js/main-v1.min.js": "/js/main-v1.min.js?id=e5793dcf7ca833a343f3",
     "/images/logo.png": "/images/logo.png?id=e140dca63402836e3f75",
@@ -82,6 +82,7 @@
     "/images/login-carpinteria.jpg": "/images/login-carpinteria.jpg?id=9d0d174782956e8cdd76",
     "/images/login-carpinteria-second.jpg": "/images/login-carpinteria-second.jpg?id=23dd863ee026ff7c9a87",
     "/images/product-180x180.png": "/images/product-180x180.png?id=90d115c3150976cb9d38",
+    "/images/background-mail-header.gif": "/images/background-mail-header.gif?id=0e66b2ae04a11e012039",
     "/js/login-colaborator.min.js": "/js/login-colaborator.min.js?id=ff28e8e85e8d0cbe6f7c",
     "/js/plugins/dpintart.js": "/js/plugins/dpintart.js?id=3632823da6903c84f911"
 }
